# face-rec

./: CMakeLists.txt  README.md  facerec.cpp  identify.cpp  main.cpp
src/: CMakeLists.txt  faceRecognition.cpp  faceRecognition.h
