cmake_minimum_required(VERSION 3.9)
SET(LIBGIVEFACEREC_SRC faceRecognition.cpp)
FIND_PACKAGE(dlib REQUIRED)
include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${dlib_INCLUDE_DIRS})
ADD_LIBRARY(givefacerec SHARED ${LIBGIVEFACEREC_SRC})
install (TARGETS givefacerec DESTINATION bin)
install (FILES faceRecognition.h DESTINATION include)
target_link_libraries(givefacerec ${dlib_LIBRARIES})